force-app/main/default/objects/Account/fields/FS_Created_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Created_By__c</fullName>
    <description>FrontSpin Field</description>
    <inlineHelpText>FrontSpin Field</inlineHelpText>
    <label>FS Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>