force-app/main/default/objects/Account/fields/FS_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Modified_By__c</fullName>
    <description>FrontSpin Field</description>
    <inlineHelpText>FrontSpin Field</inlineHelpText>
    <label>FS Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>