force-app/main/default/objects/Account/fields/Partner_Notes__c.field-meta.xml
<CustomField>
    <fullName>Partner_Notes__c</fullName>
    <description>Useful notes for this partner</description>
    <inlineHelpText>Useful notes for this partner</inlineHelpText>
    <label>Partner Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>