force-app/main/default/objects/Account/fields/PipedriveID__c.field-meta.xml
<CustomField>
    <fullName>PipedriveID__c</fullName>
    <description>This should never be used except for help with migration. DO NOT USE.</description>
    <inlineHelpText>This should never be used except for help with migration. DO NOT USE.</inlineHelpText>
    <label>PipedriveID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>