force-app/main/default/objects/Account/validationRules/Industry_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_Required</fullName>
    <active>false</active>
    <description>Industry is required before adding an Account</description>
    <errorConditionFormula>ISPICKVAL(Industry, &quot;&quot;)</errorConditionFormula>
    <errorMessage>Must specify Industry before saving</errorMessage>
</ValidationRule>